added sbt on mac note